tests/ui/ast_conditional_literal.stderr
error[E0505]: cannot move out of `condition` because it is borrowed
  --> tests/ui/ast_conditional_literal.rs:20:10
   |
17 |     let condition = vec![lit2];
   |         --------- binding `condition` declared here
18 |     let cond = ast::conditional_literal(&loc, lit, &condition).unwrap();
   |                                                    ---------- borrow of `condition` occurs here
19 |
20 |     drop(condition);
   |          ^^^^^^^^^ move out of `condition` occurs here
21 |     let _end = cond;
   |                ---- borrow later used here
